--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,13 @@
 bcrypt==4.0.1
 beautifulsoup4==4.11.1
+certifi==2022.12.7
+charset-normalizer==2.1.1
 click==8.1.3
 dnspython==2.2.1
 email-validator==1.3.0
 Flask==2.2.2
 Flask-Bcrypt==1.0.1
+Flask-Login==0.6.2
 Flask-SQLAlchemy==3.0.2
 Flask-WTF==1.0.1
 greenlet==2.0.1
@@ -14,8 +17,10 @@ itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.1
 python-dotenv==0.21.0
+requests==2.28.1
 soupsieve==2.3.2.post1
 SQLAlchemy==1.4.45
+urllib3==1.26.13
 Werkzeug==2.2.2
 WTForms==3.0.1
 zipp==3.11.0
